--- a/KnowledgeWidgetExtension.entitlements
+++ b/KnowledgeWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.lu.KnowledgeBit</string>
+		<string>group.com.timmychen.KnowledgeBit</string>
 	</array>
 </dict>
 </plist>
