--- a/KnowledgeBit/Info.plist
+++ b/KnowledgeBit/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.KnowledgeBit</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleName</key>
 	<string>KnowledgeBit</string>
 	<key>CFBundleShortVersionString</key>
