update map game

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ KnowledgeBit/SupabaseConfig.swift
 *.xcworkspace/xcuserdata/
 *.xcodeproj/xcuserdata/
 *.xcodeproj/project.xcworkspace/xcuserdata/
+KnowledgeBit/SupabaseConfig.swift
+KnowledgeBit/SupabaseConfig.swift
